# refseq_importer

./: .gitignore  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  dependencies.json  deploy.cfg  importer_config.yaml  kbase.yml  refseq_importer.spec
lib/: README.md
lib/refseq_importer/: refseq_importerImpl.py  refseq_importerServer.py
lib/refseq_importer/utils/: db_update_entries.py  get_genbank_urls.py  get_path.py  init_db.py  input.json  list_refseq_genomes.py  load_config.py  run_import.py
scripts/: entrypoint.sh  run_async.sh
stats/: README.md  db_report  pyproject.toml  reset_errors  workspace_stats
stats/src/: db_reporting.py  main.py  update_errors.py
test/: refseq_importer_server_test.py
ui/narrative/methods/run_refseq_importer/: spec.json
